MOre facebook questions, code re-formatting