@@ -5,7 +5,9 @@ import org.apache.commons.lang3.tuple.Triple;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -21,6 +23,7 @@ class ArrayProblemsTest {
     @Test
     void findLHS() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{-3, -1, -1, -1, -3, -2}, 4);
         scenarios.put(new int[]{1, 2, 2, 3, 4, 5, 1, 1, 1, 1}, 7);
         scenarios.put(new int[]{2, 2, 2, 2, 2, 2, 2, 3, 1, 0, 0, 0, 3, 1, -1, 0, 1, 1, 0, 0, 1, 1, 2, 2,
@@ -29,7 +32,7 @@ class ArrayProblemsTest {
         scenarios.put(new int[]{1, 2, 3, 4}, 2);
         scenarios.put(new int[]{1, 1, 1, 1}, 0);
 
-        List<String> ways = Arrays.asList("brute-force", "sorting", "hashmap");
+        List<String> ways = List.of("brute-force", "sorting", "hashmap");
 
         scenarios.forEach((input, length) -> {
             ways.forEach(way -> assertEquals(length, arrayProblems.findLHS(input, way)));
@@ -40,6 +43,7 @@ class ArrayProblemsTest {
     @Test
     void testCanFormArray() {
         Map<Pair<int[], int[][]>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{85}, new int[][]{{85}}), true);
         scenarios.put(Pair.of(new int[]{15, 88}, new int[][]{{88}, {15}}), true);
         scenarios.put(Pair.of(new int[]{49, 18, 16}, new int[][]{{16, 18, 49}}), false);
@@ -54,6 +58,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxWaterContainerArea() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 8, 6, 2, 5, 4, 8, 3, 7}, 49);
         scenarios.put(new int[]{1, 1}, 1);
         scenarios.put(new int[]{4, 3, 2, 1, 4}, 16);
@@ -65,6 +70,8 @@ class ArrayProblemsTest {
     @Test
     void testNumberOfArithmeticSlices() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
+        scenarios.put(new int[]{1, 2, 3, 8, 9, 10}, 2);
         scenarios.put(new int[]{1, 2, 3, 4}, 3);
         scenarios.put(new int[]{1, 2, 3, 8, 9, 10}, 2);
 
@@ -74,6 +81,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxProfit2() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{7, 1, 5, 3, 6, 4}, 7);
         scenarios.put(new int[]{1, 2, 3, 4, 5}, 4);
         scenarios.put(new int[]{5, 4, 3, 2, 1}, 0);
@@ -86,6 +94,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxProfit5() {
         Map<Pair<Integer, int[]>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(2, new int[]{1, 3, 2, 8, 4, 9}), 8);
         scenarios.put(Pair.of(3, new int[]{1, 3, 7, 5, 10, 3}), 6);
 
@@ -107,6 +116,7 @@ class ArrayProblemsTest {
     @Test
     void Count() {
         Map<Pair<int[], int[]>, int[]> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{2, 7, 11, 15}, new int[]{1, 10, 4, 11}), new int[]{2, 11, 7, 15});
         scenarios.put(Pair.of(new int[]{12, 24, 8, 32}, new int[]{13, 25, 32, 11}), new int[]{24, 32, 8, 12});
         scenarios.put(Pair.of(new int[]{3, 3, 4, 4}, new int[]{2, 2, 3, 3}), new int[]{3, 3, 4, 4});
@@ -118,6 +128,7 @@ class ArrayProblemsTest {
     @Test
     void testIsIdealPermutation() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 0, 2}, true);
         scenarios.put(new int[]{1, 2, 0}, false);
 
@@ -127,6 +138,7 @@ class ArrayProblemsTest {
     @Test
     void testLargestRectangleArea() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{2, 1, 5, 6, 2, 3}, 10);
 
         scenarios.forEach((input, expected) -> assertEquals(expected, arrayProblems.largestRectangleArea(input)));
@@ -135,6 +147,7 @@ class ArrayProblemsTest {
     @Test
     void testFurthestBuilding() {
         Map<Triple<int[], Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(new int[]{4, 2, 7, 6, 9, 14, 12}, 5, 1), 4);
         scenarios.put(Triple.of(new int[]{4, 12, 2, 7, 3, 18, 20, 3, 19}, 10, 2), 7);
         scenarios.put(Triple.of(new int[]{14, 3, 19, 3}, 17, 0), 3);
@@ -147,6 +160,7 @@ class ArrayProblemsTest {
     @Test
     void testSearchRange() {
         Map<Pair<int[], Integer>, int[]> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{5, 7, 7, 8, 8, 10}, 8), new int[]{3, 4});
         scenarios.put(Pair.of(new int[]{5, 7, 7, 8, 8, 10}, 6), new int[]{-1, -1});
         scenarios.put(Pair.of(new int[]{}, 0), new int[]{-1, -1});
@@ -158,6 +172,7 @@ class ArrayProblemsTest {
     @Test
     void testRunningSum() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 1, 1, 1, 1}, new int[]{1, 2, 3, 4, 5});
         scenarios.put(new int[]{1, 2, 3, 4, 5}, new int[]{1, 3, 6, 10, 15});
 
@@ -167,6 +182,7 @@ class ArrayProblemsTest {
     @Test
     void testCheckPossibility() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{3, 4, 2, 3}, false);
         scenarios.put(new int[]{4, 2, 3}, true);
         scenarios.put(new int[]{-1, 4, 2, 3}, true);
@@ -177,6 +193,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGame() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{2, 3, 1, 1, 4}, true);
         scenarios.put(new int[]{2, 1, 1, 0, 4}, false);
         scenarios.put(new int[]{}, true);
@@ -188,6 +205,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameII() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{2, 3, 1, 1, 4}, 2);
         scenarios.put(new int[]{2, 3, 0, 1, 4}, 2);
         scenarios.put(new int[]{}, 0);
@@ -199,6 +217,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameIII() {
         Map<Pair<int[], Integer>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{4, 2, 3, 0, 3, 1, 2}, 5), true);
         scenarios.put(Pair.of(new int[]{4, 2, 3, 0, 3, 1, 2}, 0), true);
         scenarios.put(Pair.of(new int[]{3, 0, 2, 1, 2}, 2), false);
@@ -210,6 +229,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameIV() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{100, -23, -23, 404, 100, 23, 23, 23, 3, 404}, 3);
         scenarios.put(new int[]{7, 6, 9, 6, 9, 6, 9, 7}, 1);
         scenarios.put(new int[]{7}, 0);
@@ -220,6 +240,7 @@ class ArrayProblemsTest {
     @Test
     void testIsPossibleToConstructTargetArray() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 1, 1, 2}, false);
         scenarios.put(new int[]{3, 5, 9}, true);
 
@@ -229,6 +250,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxScore() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5, 6, 1}, 3), 12);
         scenarios.put(Pair.of(new int[]{9, 7, 7, 9, 7, 7, 9}, 7), 55);
         scenarios.put(Pair.of(new int[]{1, 79, 80, 1, 1, 1, 200, 1}, 3), 202);
@@ -240,6 +262,7 @@ class ArrayProblemsTest {
     @Test
     void testMinMoves() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 3}, 3);
         scenarios.put(new int[]{1, 1, 1, 9}, 8);
         scenarios.put(new int[]{1, 1, 1}, 0);
@@ -250,6 +273,7 @@ class ArrayProblemsTest {
     @Test
     void testMinMoves2() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 3}, 2);
         scenarios.put(new int[]{1, 10, 2, 9}, 16);
 
@@ -259,6 +283,7 @@ class ArrayProblemsTest {
     @Test
     void testSubsetXORSum() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 3}, 6);
         scenarios.put(new int[]{1, 5, 6}, 28);
 
@@ -268,6 +293,7 @@ class ArrayProblemsTest {
     @Test
     void testMaximumUniqueSubarray() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{5, 2, 1, 2, 5, 2, 1, 2, 5}, 8);
         scenarios.put(new int[]{4, 2, 4, 5, 6}, 17);
         scenarios.put(new int[]{1, 1, 1}, 1);
@@ -281,6 +307,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxProduct() {
         Map<String[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"abcw", "baz", "foo", "bar", "xtfn", "abcdef"}, 16);
         scenarios.put(new String[]{"a", "ab", "abc", "d", "cd", "bcd", "abcd"}, 4);
         scenarios.put(new String[]{"a", "aa", "aaa", "aaaa"}, 0);
@@ -291,6 +318,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxArea() {
         Map<Pair<Pair<Integer, Integer>, Pair<int[], int[]>>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(Pair.of(5, 4), Pair.of(new int[]{3, 1}, new int[]{1})), 6);
         scenarios.put(Pair.of(Pair.of(5, 4), Pair.of(new int[]{3}, new int[]{3})), 9);
         scenarios.put(Pair.of(Pair.of(5, 4), Pair.of(new int[]{1, 2, 4}, new int[]{1, 3})), 4);
@@ -303,6 +331,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxDistToClosest() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 0, 0, 0, 1, 0, 1}, 2);
         scenarios.put(new int[]{1, 0, 0, 0}, 3);
         scenarios.put(new int[]{0, 1}, 1);
@@ -313,6 +342,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxSumRangeQuery() {
         Map<Pair<int[], int[][]>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5}, new int[][]{{1, 3}, {0, 1}}), 19);
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5, 6}, new int[][]{{0, 1}}), 11);
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5, 10}, new int[][]{{0, 2}, {1, 3}, {1, 1}}), 47);
@@ -325,6 +355,7 @@ class ArrayProblemsTest {
     @Test
     void testMaxPerformance() {
         Map<Pair<Pair<Integer, Integer>, Pair<int[], int[]>>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(Pair.of(6, 2), Pair.of(new int[]{2, 10, 3, 1, 5, 8}, new int[]{5, 4, 3, 9, 7, 2})), 60);
         scenarios.put(Pair.of(Pair.of(6, 3), Pair.of(new int[]{2, 10, 3, 1, 5, 8}, new int[]{5, 4, 3, 9, 7, 2})), 68);
         scenarios.put(Pair.of(Pair.of(6, 4), Pair.of(new int[]{2, 10, 3, 1, 5, 8}, new int[]{5, 4, 3, 9, 7, 2})), 72);
@@ -338,6 +369,7 @@ class ArrayProblemsTest {
     @Test
     void testCarPooling() {
         Map<Pair<int[][], Integer>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[][]{{2, 1, 5}, {3, 3, 7}}, 4), false);
         scenarios.put(Pair.of(new int[][]{{2, 1, 5}, {3, 3, 7}}, 5), true);
         scenarios.put(Pair.of(new int[][]{{2, 1, 5}, {3, 5, 7}}, 3), true);
@@ -350,6 +382,7 @@ class ArrayProblemsTest {
     @Test
     void testLongestConsecutive() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{100, 4, 200, 1, 3, 2}, 4);
         scenarios.put(new int[]{0, 3, 7, 2, 5, 8, 4, 6, 0, 1}, 9);
 
@@ -359,6 +392,7 @@ class ArrayProblemsTest {
     @Test
     void testRotatedBinarySearch() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{4, 5, 6, 7, 0, 1, 2}, 0), 4);
         scenarios.put(Pair.of(new int[]{4, 5, 6, 7, 0, 1, 2}, 1), 5);
         scenarios.put(Pair.of(new int[]{4, 5, 6, 7, 0, 1, 2}, 2), 6);
@@ -375,6 +409,7 @@ class ArrayProblemsTest {
     @Test
     void testCanCompleteCircuit() {
         Map<Pair<int[], int[]>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5}, new int[]{3, 4, 5, 1, 2}), 3);
         scenarios.put(Pair.of(new int[]{2, 3, 4}, new int[]{3, 4, 5}), -1);
         scenarios.put(Pair.of(new int[]{2, 3, 4}, new int[]{3, 4, 3}), -1);
@@ -387,6 +422,7 @@ class ArrayProblemsTest {
     @Test
     void testFind132pattern() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 3, 4}, false);
         scenarios.put(new int[]{3, 1, 4, 2}, true);
         scenarios.put(new int[]{-1, 3, 2, 0}, true);
@@ -398,6 +434,7 @@ class ArrayProblemsTest {
     @Test
     void testMakeSquare() {
         Map<int[], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 1, 2, 2, 2}, true);
         scenarios.put(new int[]{3, 3, 3, 3, 4}, false);
         scenarios.put(new int[]{3, 3, 3}, false);
@@ -410,6 +447,7 @@ class ArrayProblemsTest {
     @Test
     void testCanPartitionKSubsets() {
         Map<Pair<int[], Integer>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{4, 3, 2, 3, 5, 2, 1}, 4), true);
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4}, 3), false);
         scenarios.put(Pair.of(new int[]{1, 2}, 3), false);
@@ -422,6 +460,7 @@ class ArrayProblemsTest {
     @Test
     void testNumSubarrayBoundedMax() {
         Map<Triple<int[], Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(new int[]{2, 1, 4, 3}, 2, 3), 3);
         scenarios.put(Triple.of(new int[]{73, 55, 36, 5, 55, 14, 9, 7, 72, 52}, 32, 69), 22);
         scenarios.put(Triple.of(new int[]{73, 55, 36, 5, 55, 14, 9}, 32, 69), 17);
@@ -435,6 +474,7 @@ class ArrayProblemsTest {
     @Test
     void testBagOfTokensScore() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{100}, 50), 0);
         scenarios.put(Pair.of(new int[]{100, 200}, 150), 1);
         scenarios.put(Pair.of(new int[]{100, 400, 300, 200}, 200), 2);
@@ -446,11 +486,12 @@ class ArrayProblemsTest {
     @Test
     void testThreeSum() {
         Map<int[], List<List<Integer>>> scenarios = new HashMap<>();
-        scenarios.put(new int[]{-1, 0, 1, 2, -1, -4}, Arrays.asList(Arrays.asList(-1, -1, 2), Arrays.asList(-1, 0, 1)));
-        scenarios.put(new int[]{-1, 0, 1, 1, 2, 2, -1}, Arrays.asList(Arrays.asList(-1, -1, 2), Arrays.asList(-1, 0, 1)));
-        scenarios.put(new int[]{-1, 0, 1, 1, 2, -1}, Arrays.asList(Arrays.asList(-1, -1, 2), Arrays.asList(-1, 0, 1)));
-        scenarios.put(new int[]{}, Collections.emptyList());
-        scenarios.put(new int[]{0}, Collections.emptyList());
+
+        scenarios.put(new int[]{-1, 0, 1, 2, -1, -4}, List.of(List.of(-1, -1, 2), List.of(-1, 0, 1)));
+        scenarios.put(new int[]{-1, 0, 1, 1, 2, 2, -1}, List.of(List.of(-1, -1, 2), List.of(-1, 0, 1)));
+        scenarios.put(new int[]{-1, 0, 1, 1, 2, -1}, List.of(List.of(-1, -1, 2), List.of(-1, 0, 1)));
+        scenarios.put(new int[]{}, List.of());
+        scenarios.put(new int[]{0}, List.of());
 
         scenarios.forEach((input, expected) -> assertEquals(expected, arrayProblems.threeSum(input)));
     }
@@ -458,6 +499,7 @@ class ArrayProblemsTest {
     @Test
     void testThreeSumClosest() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{-1, 0, 1, 2, -1, -4}, 0), 0);
         scenarios.put(Pair.of(new int[]{-1, 0, 1, 2, 1, -4}, 0), 0);
         scenarios.put(Pair.of(new int[]{-1, 2, 1, -4}, 1), 2);
@@ -471,6 +513,7 @@ class ArrayProblemsTest {
     @Test
     void testInsertMergeInterval() {
         Map<Pair<int[][], int[]>, int[][]> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[][]{{1, 3}, {6, 9}}, new int[]{2, 5}), new int[][]{{1, 5}, {6, 9}});
         scenarios.put(Pair.of(new int[][]{{1, 2}, {3, 5}, {6, 7}, {8, 10}, {12, 16}}, new int[]{4, 8}),
                 new int[][]{{1, 2}, {3, 10}, {12, 16}});
@@ -485,6 +528,7 @@ class ArrayProblemsTest {
     @Test
     void testMergeInterval() {
         Map<int[][], int[][]> scenarios = new HashMap<>();
+
         scenarios.put(new int[][]{{1, 3}, {2, 6}, {8, 10}, {15, 18}}, new int[][]{{1, 6}, {8, 10}, {15, 18}});
         scenarios.put(new int[][]{{1, 4}, {4, 5}}, new int[][]{{1, 5}});
         scenarios.put(new int[][]{{1, 3}, {4, 5}}, new int[][]{{1, 3}, {4, 5}});
@@ -495,11 +539,12 @@ class ArrayProblemsTest {
     @Test
     void testCountSmaller() {
         Map<int[], List<Integer>> scenarios = new HashMap<>();
-        scenarios.put(new int[]{5, 2, 6, 1}, Arrays.asList(2, 1, 1, 0));
-        scenarios.put(new int[]{5, 6, 7, 8}, Arrays.asList(0, 0, 0, 0));
-        scenarios.put(new int[]{-1, -2}, Arrays.asList(1, 0));
-        scenarios.put(new int[]{-1, -1}, Arrays.asList(0, 0));
-        scenarios.put(new int[]{-1}, Collections.singletonList(0));
+
+        scenarios.put(new int[]{5, 2, 6, 1}, List.of(2, 1, 1, 0));
+        scenarios.put(new int[]{5, 6, 7, 8}, List.of(0, 0, 0, 0));
+        scenarios.put(new int[]{-1, -2}, List.of(1, 0));
+        scenarios.put(new int[]{-1, -1}, List.of(0, 0));
+        scenarios.put(new int[]{-1}, List.of(0));
 
         scenarios.forEach((input, expected) -> assertEquals(expected, arrayProblems.countSmaller(input)));
     }
@@ -507,6 +552,7 @@ class ArrayProblemsTest {
     @Test
     void testMinEatingSpeed() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{3, 6, 7, 11}, 8), 4);
         scenarios.put(Pair.of(new int[]{30, 11, 23, 4, 20}, 5), 30);
         scenarios.put(Pair.of(new int[]{30, 11, 23, 4, 20}, 6), 23);
@@ -518,6 +564,7 @@ class ArrayProblemsTest {
     @Test
     void testShipWithinDays() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}, 5), 15);
         scenarios.put(Pair.of(new int[]{3, 2, 2, 4, 1, 4}, 3), 6);
         scenarios.put(Pair.of(new int[]{1, 2, 3, 1, 1}, 4), 3);
@@ -529,6 +576,7 @@ class ArrayProblemsTest {
     @Test
     void testMinDaysBouquets() {
         Map<Triple<int[], Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(new int[]{1, 10, 3, 10, 2}, 3, 1), 3);
         scenarios.put(Triple.of(new int[]{1, 10, 3, 10, 2}, 3, 2), -1);
         scenarios.put(Triple.of(new int[]{7, 7, 7, 7, 12, 7, 7}, 2, 3), 12);
@@ -543,6 +591,7 @@ class ArrayProblemsTest {
     @Test
     void testSplitArray() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{7, 2, 5, 10, 8}, 2), 18);
         scenarios.put(Pair.of(new int[]{1, 2, 3, 4, 5}, 2), 9);
         scenarios.put(Pair.of(new int[]{1, 4, 4}, 3), 4);
@@ -554,6 +603,7 @@ class ArrayProblemsTest {
     @Test
     void testFindKthNumber() {
         Map<Triple<Integer, Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(3, 3, 5), 3);
         scenarios.put(Triple.of(2, 3, 6), 6);
 
@@ -564,6 +614,7 @@ class ArrayProblemsTest {
     @Test
     void testSmallestDistancePair() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 3, 1}, 1), 0);
         scenarios.put(Pair.of(new int[]{1, 1, 1}, 2), 0);
         scenarios.put(Pair.of(new int[]{1, 6, 1}, 3), 5);
@@ -575,6 +626,7 @@ class ArrayProblemsTest {
     @Test
     void testFindMaxConsecutiveOnes() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 0, 1, 1, 0}, 4);
         scenarios.put(new int[]{1, 0, 1, 1, 0, 1}, 4);
 
@@ -584,6 +636,7 @@ class ArrayProblemsTest {
     @Test
     void testLongestOnes() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0}, 2), 6);
         scenarios.put(Pair.of(new int[]{0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1}, 3), 10);
 
@@ -594,6 +647,7 @@ class ArrayProblemsTest {
     @Test
     void testCarFleet() {
         Map<Triple<Integer, int[], int[]>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(12, new int[]{10, 8, 0, 5, 3}, new int[]{2, 4, 1, 1, 3}), 3);
 
         scenarios.forEach((input, expected) -> assertEquals(expected,
@@ -603,6 +657,7 @@ class ArrayProblemsTest {
     @Test
     void testMinDifference() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{5, 3, 2, 4}, 0);
         scenarios.put(new int[]{1, 5, 0, 10, 14}, 1);
         scenarios.put(new int[]{6, 6, 0, 1, 1, 4, 6}, 2);
@@ -616,6 +671,7 @@ class ArrayProblemsTest {
     @Test
     void testTotalFruit() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 1}, 3);
         scenarios.put(new int[]{0, 1, 2, 2}, 3);
         scenarios.put(new int[]{1, 2, 3, 2, 2}, 4);
@@ -627,6 +683,7 @@ class ArrayProblemsTest {
     @Test
     void testNextPermutation() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 3}, new int[]{1, 3, 2});
         scenarios.put(new int[]{3, 2, 1}, new int[]{1, 2, 3});
         scenarios.put(new int[]{1, 5, 8, 4, 7, 6, 4, 3, 1}, new int[]{1, 5, 8, 6, 1, 3, 4, 4, 7});
@@ -640,6 +697,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameV() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{6, 4, 14, 6, 8, 13, 9, 7, 10, 6, 12}, 2), 4);
         scenarios.put(Pair.of(new int[]{3, 3, 3, 3, 3}, 3), 1);
         scenarios.put(Pair.of(new int[]{7, 6, 5, 4, 3, 2, 1}, 1), 7);
@@ -653,6 +711,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameVI() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{1, -1, -2, 4, -7, 3}, 2), 7);
         scenarios.put(Pair.of(new int[]{10, -5, -2, 4, 0, 3}, 3), 17);
         scenarios.put(Pair.of(new int[]{1, -5, -20, 4, -1, 3, -6, -3}, 2), 0);
@@ -664,6 +723,7 @@ class ArrayProblemsTest {
     @Test
     void testJumpGameVII() {
         Map<Triple<String, Integer, Integer>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of("011010", 2, 3), true);
         scenarios.put(Triple.of("01101110", 2, 3), false);
         scenarios.put(Triple.of("01", 0, 1), false);
@@ -676,6 +736,7 @@ class ArrayProblemsTest {
     @Test
     void testPlusOne() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{1, 2, 3}, new int[]{1, 2, 4});
         scenarios.put(new int[]{1, 2, 9}, new int[]{1, 3, 0});
         scenarios.put(new int[]{9}, new int[]{1, 0});
@@ -687,6 +748,7 @@ class ArrayProblemsTest {
     @Test
     void testFindKthLargest() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{2, 1, 5, 6, 4}, 2), 5);
         scenarios.put(Pair.of(new int[]{3, 2, 3, 1, 2, 4, 5, 5, 6}, 4), 4);
 
@@ -697,11 +759,12 @@ class ArrayProblemsTest {
     @Test
     void testFindMissingRanges() {
         Map<Triple<int[], Integer, Integer>, List<String>> scenarios = new HashMap<>();
-        scenarios.put(Triple.of(new int[]{0, 1, 3, 50, 75}, 0, 99), Arrays.asList("2", "4->49", "51->74", "76->99"));
-        scenarios.put(Triple.of(new int[]{}, 1, 1), Collections.singletonList("1"));
-        scenarios.put(Triple.of(new int[]{}, -3, -1), Collections.singletonList("-3->-1"));
-        scenarios.put(Triple.of(new int[]{-1}, -1, -1), Collections.emptyList());
-        scenarios.put(Triple.of(new int[]{-1}, -2, -1), Collections.singletonList("-2"));
+
+        scenarios.put(Triple.of(new int[]{0, 1, 3, 50, 75}, 0, 99), List.of("2", "4->49", "51->74", "76->99"));
+        scenarios.put(Triple.of(new int[]{}, 1, 1), List.of("1"));
+        scenarios.put(Triple.of(new int[]{}, -3, -1), List.of("-3->-1"));
+        scenarios.put(Triple.of(new int[]{-1}, -1, -1), List.of());
+        scenarios.put(Triple.of(new int[]{-1}, -2, -1), List.of("-2"));
 
         scenarios.forEach((input, expected) -> assertEquals(expected,
                 arrayProblems.findMissingRanges(input.getLeft(), input.getMiddle(), input.getRight())));
@@ -710,6 +773,7 @@ class ArrayProblemsTest {
     @Test
     void testCanAttendMeetings() {
         Map<int[][], Boolean> scenarios = new HashMap<>();
+
         scenarios.put(new int[][]{{0, 30}, {5, 10}, {15, 20}}, false);
         scenarios.put(new int[][]{{7, 10}, {2, 4}}, true);
         scenarios.put(new int[][]{}, true);
@@ -720,6 +784,7 @@ class ArrayProblemsTest {
     @Test
     void testMinMeetingRooms() {
         Map<int[][], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[][]{{0, 30}, {5, 10}, {15, 20}}, 2);
         scenarios.put(new int[][]{{7, 10}, {2, 4}}, 1);
         scenarios.put(new int[][]{}, 0);
@@ -731,6 +796,7 @@ class ArrayProblemsTest {
     @Test
     void testMissingElement() {
         Map<Pair<int[], Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new int[]{4, 7, 9, 10}, 1), 5);
         scenarios.put(Pair.of(new int[]{4, 7, 9, 10}, 3), 8);
         scenarios.put(Pair.of(new int[]{1, 2, 4}, 3), 6);
@@ -742,6 +808,7 @@ class ArrayProblemsTest {
     @Test
     void testPeakIndexInMountainArray() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{0, 1, 0}, 1);
         scenarios.put(new int[]{0, 2, 1, 0}, 1);
         scenarios.put(new int[]{0, 10, 5, 2}, 1);
@@ -754,6 +821,7 @@ class ArrayProblemsTest {
     @Test
     void testFindMinInRotatedArray() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{3, 4, 5, 1, 2}, 1);
         scenarios.put(new int[]{4, 5, 6, 7, 0, 1, 2}, 0);
         scenarios.put(new int[]{11, 13, 15, 17}, 11);
@@ -764,6 +832,7 @@ class ArrayProblemsTest {
     @Test
     void testFindMinInRotatedArrayII() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{2, 2, 2, 0, 1, 2, 2}, 0);
         scenarios.put(new int[]{1, 3, 5}, 1);
 
@@ -773,6 +842,7 @@ class ArrayProblemsTest {
     @Test
     void testSortColors() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{2, 0, 2, 1, 1, 0}, new int[]{0, 0, 1, 1, 2, 2});
         scenarios.put(new int[]{2, 0, 1}, new int[]{0, 1, 2});
         scenarios.put(new int[]{0}, new int[]{0});
@@ -786,8 +856,9 @@ class ArrayProblemsTest {
     @Test
     void testFindPeakElement() {
         Map<int[], List<Integer>> scenarios = new HashMap<>();
-        scenarios.put(new int[]{1, 2, 3, 1}, Collections.singletonList(2));
-        scenarios.put(new int[]{1, 2, 1, 3, 5, 6, 4}, Arrays.asList(1, 5));
+
+        scenarios.put(new int[]{1, 2, 3, 1}, List.of(2));
+        scenarios.put(new int[]{1, 2, 1, 3, 5, 6, 4}, List.of(1, 5));
 
         scenarios.forEach((input, expected) -> assertTrue(expected.contains(arrayProblems.findPeakElement(input))));
     }
@@ -795,6 +866,7 @@ class ArrayProblemsTest {
     @Test
     void testAsteroidCollision() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{5, 10, -5}, new int[]{5, 10});
         scenarios.put(new int[]{5, -5}, new int[]{});
         scenarios.put(new int[]{10, 2, -5}, new int[]{10});
@@ -807,6 +879,7 @@ class ArrayProblemsTest {
     @Test
     void testTrapRainWater() {
         Map<int[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{0, 1, 0, 2, 1, 0, 1, 3, 2, 1, 2, 1}, 6);
         scenarios.put(new int[]{4, 2, 0, 3, 2, 5}, 9);
         scenarios.put(new int[]{}, 0);
@@ -872,6 +945,7 @@ class ArrayProblemsTest {
     @Test
     void testMoveZeroes() {
         Map<int[], int[]> scenarios = new HashMap<>();
+
         scenarios.put(new int[]{0, 1, 2, 0, 3}, new int[]{1, 2, 3, 0, 0});
         scenarios.put(new int[]{0, 1, 2, 3}, new int[]{1, 2, 3, 0});
         scenarios.put(new int[]{1, 2, 3}, new int[]{1, 2, 3});
@@ -882,6 +956,26 @@ class ArrayProblemsTest {
         scenarios.forEach((input, expected) -> {
             arrayProblems.moveZeroes(input);
             assertArrayEquals(expected, input);
+        });
+    }
+
+    @Test
+    void testMergeSortedArrays() {
+        Map<Pair<Pair<int[], Integer>, Pair<int[], Integer>>, int[]> scenarios = new HashMap<>();
+
+        scenarios.put(Pair.of(Pair.of(new int[]{1, 2, 3, 0, 0, 0}, 3), Pair.of(new int[]{2, 5, 6}, 3)),
+                new int[]{1, 2, 2, 3, 5, 6});
+        scenarios.put(Pair.of(Pair.of(new int[]{1, 2, 3, 0, 0, 0}, 3), Pair.of(new int[]{-2, -1, 0}, 3)),
+                new int[]{-2, -1, 0, 1, 2, 3});
+        scenarios.put(Pair.of(Pair.of(new int[]{1, 2, 3, 0, 0, 0}, 3), Pair.of(new int[]{4, 5, 6}, 3)),
+                new int[]{1, 2, 3, 4, 5, 6});
+        scenarios.put(Pair.of(Pair.of(new int[]{1}, 1), Pair.of(new int[]{}, 0)), new int[]{1});
+        scenarios.put(Pair.of(Pair.of(new int[]{0}, 0), Pair.of(new int[]{1}, 1)), new int[]{1});
+
+        scenarios.forEach((input, expected) -> {
+            arrayProblems.mergeSortedArrays(input.getLeft().getLeft(), input.getLeft().getRight(),
+                    input.getRight().getLeft(), input.getRight().getRight());
+            assertArrayEquals(expected, input.getLeft().getLeft());
         });
     }
 }
