@@ -6,7 +6,9 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.solutions.leetcode.exceptions.BadInputException;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -22,6 +24,7 @@ class StringProblemsTest {
     @Test
     void testShortestToChar() {
         Map<Pair<String, Character>, int[]> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("loveleetcode", 'e'), new int[]{3, 2, 1, 0, 1, 0, 0, 1, 2, 2, 1, 0});
         scenarios.put(Pair.of("aaab", 'b'), new int[]{3, 2, 1, 0});
         scenarios.put(Pair.of("aaab", 'a'), new int[]{0, 0, 0, 1});
@@ -34,6 +37,7 @@ class StringProblemsTest {
     @Test
     void testIsAnagram() {
         Map<Pair<String, String>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("anagram", "nagamar"), true);
         scenarios.put(Pair.of("anagram", "aaaagrm"), false);
         scenarios.put(Pair.of("ram", "hello"), false);
@@ -45,6 +49,7 @@ class StringProblemsTest {
     @Test
     void testMinimumLengthEncoding() {
         Map<String[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"time", "me", "bell"}, 10);
         scenarios.put(new String[]{"t"}, 2);
 
@@ -54,6 +59,7 @@ class StringProblemsTest {
     @Test
     void testHasAllCodes() {
         Map<Pair<String, Integer>, Boolean> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("00110110", 2), true);
         scenarios.put(Pair.of("00110", 2), true);
         scenarios.put(Pair.of("00110", 1), true);
@@ -67,13 +73,14 @@ class StringProblemsTest {
     @Test
     void testWordSubsets() {
         Map<Pair<String[], String[]>, List<String>> scenarios = new HashMap<>();
+
         String[] A = {"amazon", "apple", "facebook", "google", "leetcode"};
 
-        scenarios.put(Pair.of(A, new String[]{"e", "o"}), Arrays.asList("facebook", "google", "leetcode"));
-        scenarios.put(Pair.of(A, new String[]{"e", "l"}), Arrays.asList("apple", "google", "leetcode"));
-        scenarios.put(Pair.of(A, new String[]{"e", "oo"}), Arrays.asList("google", "facebook"));
-        scenarios.put(Pair.of(A, new String[]{"eo", "lo"}), Arrays.asList("google", "leetcode"));
-        scenarios.put(Pair.of(A, new String[]{"ec", "oc", "ceo"}), Arrays.asList("facebook", "leetcode"));
+        scenarios.put(Pair.of(A, new String[]{"e", "o"}), List.of("facebook", "google", "leetcode"));
+        scenarios.put(Pair.of(A, new String[]{"e", "l"}), List.of("apple", "google", "leetcode"));
+        scenarios.put(Pair.of(A, new String[]{"e", "oo"}), List.of("google", "facebook"));
+        scenarios.put(Pair.of(A, new String[]{"eo", "lo"}), List.of("google", "leetcode"));
+        scenarios.put(Pair.of(A, new String[]{"ec", "oc", "ceo"}), List.of("facebook", "leetcode"));
 
         scenarios.forEach((input, expected) -> {
                     try {
@@ -88,6 +95,7 @@ class StringProblemsTest {
     @Test
     void testCountSubstrings() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("abc", 3);
         scenarios.put("aaa", 6);
 
@@ -97,10 +105,11 @@ class StringProblemsTest {
     @Test
     void testLetterCasePermutation() {
         Map<String, List<String>> scenarios = new HashMap<>();
-        scenarios.put("abc", Arrays.asList("abc", "Abc", "aBc", "abC", "aBC", "AbC", "ABC", "ABc"));
-        scenarios.put("ab9", Arrays.asList("ab9", "Ab9", "aB9", "AB9"));
-        scenarios.put("AB9", Arrays.asList("ab9", "Ab9", "aB9", "AB9"));
-        scenarios.put("aB9", Arrays.asList("ab9", "Ab9", "aB9", "AB9"));
+
+        scenarios.put("abc", List.of("abc", "Abc", "aBc", "abC", "aBC", "AbC", "ABC", "ABc"));
+        scenarios.put("ab9", List.of("ab9", "Ab9", "aB9", "AB9"));
+        scenarios.put("AB9", List.of("ab9", "Ab9", "aB9", "AB9"));
+        scenarios.put("aB9", List.of("ab9", "Ab9", "aB9", "AB9"));
 
         scenarios.forEach((input, expected) ->
                 assertTrue(expected.containsAll(stringProblems.letterCasePermutation(input))));
@@ -109,6 +118,7 @@ class StringProblemsTest {
     @Test
     void testFindMaxForm() {
         Map<Triple<String[], Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(new String[]{"10", "0", "1"}, 1, 1), 2);
         scenarios.put(Triple.of(new String[]{"10", "0001", "111001", "1", "0"}, 5, 3), 4);
 
@@ -119,6 +129,7 @@ class StringProblemsTest {
     @Test
     void testLongestValidParentheses() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("(()))", 4);
         scenarios.put("())", 2);
         scenarios.put(")()())", 4);
@@ -131,6 +142,7 @@ class StringProblemsTest {
     @Test
     void testHalvesAreAlike() {
         Map<String, Boolean> scenarios = new HashMap<>();
+
         scenarios.put("textbank", true);
         scenarios.put("book", true);
         scenarios.put("textbook", false);
@@ -142,6 +154,7 @@ class StringProblemsTest {
     @Test
     void testRemoveDuplicates() {
         Map<String, String> scenarios = new HashMap<>();
+
         scenarios.put("abbaca", "ca");
         scenarios.put("aabccbe", "e");
 
@@ -151,6 +164,7 @@ class StringProblemsTest {
     @Test
     void testRemoveKDuplicates() {
         Map<Pair<String, Integer>, String> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("abcd", 2), "abcd");
         scenarios.put(Pair.of("deeedbbcccbdaa", 3), "aa");
         scenarios.put(Pair.of("pbbcggttciiippooaais", 2), "ps");
@@ -162,6 +176,7 @@ class StringProblemsTest {
     @Test
     void testCountBinarySubstrings() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("00110", 3);
         scenarios.put("00110011", 6);
         scenarios.put("10101", 4);
@@ -173,6 +188,7 @@ class StringProblemsTest {
     @Test
     void testBulbSwitcherIV() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("101", 3);
         scenarios.put("10111", 3);
         scenarios.put("0100", 2);
@@ -183,8 +199,9 @@ class StringProblemsTest {
     @Test
     void testRemoveSubfolders() {
         Map<String[], List<String>> scenarios = new HashMap<>();
-        scenarios.put(new String[]{"/a", "/a/b", "/c/d", "/c/d/e", "/c/f"}, Arrays.asList("/a", "/c/d", "/c/f"));
-        scenarios.put(new String[]{"/a", "/a/b/c", "/a/b/d"}, Collections.singletonList("/a"));
+
+        scenarios.put(new String[]{"/a", "/a/b", "/c/d", "/c/d/e", "/c/f"}, List.of("/a", "/c/d", "/c/f"));
+        scenarios.put(new String[]{"/a", "/a/b/c", "/a/b/d"}, List.of("/a"));
 
         scenarios.forEach((input, expected) -> assertTrue(expected.containsAll(stringProblems.removeSubfolders(input))));
     }
@@ -192,6 +209,7 @@ class StringProblemsTest {
     @Test
     void testMinDeletions() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("aaabbc", 0);
         scenarios.put("aaabbbccc", 3);
         scenarios.put("aaabbbcc", 2);
@@ -203,6 +221,7 @@ class StringProblemsTest {
     @Test
     void testLongestStrChain() {
         Map<String[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"xbc", "pcxbcf", "xb", "cxbc", "pcxbc"}, 5);
         scenarios.put(new String[]{"a", "b", "ba", "bca", "bda", "bdca"}, 4);
 
@@ -212,15 +231,16 @@ class StringProblemsTest {
     @Test
     void testFindDuplicate() {
         Map<String[], List<List<String>>> scenarios = new HashMap<>();
+
         scenarios.put(
                 new String[]{
                         "root/a 1.txt(abcd) 2.txt(efgh)",
                         "root/c 3.txt(abcd)", "root/c/d 4.txt(efgh)",
                         "root 4.txt(efgh)"
                 },
-                Arrays.asList(
-                        Arrays.asList("root/a/2.txt", "root/c/d/4.txt", "root/4.txt"),
-                        Arrays.asList("root/a/1.txt", "root/c/3.txt"))
+                List.of(
+                        List.of("root/a/2.txt", "root/c/d/4.txt", "root/4.txt"),
+                        List.of("root/a/1.txt", "root/c/3.txt"))
         );
 
         scenarios.put(
@@ -229,9 +249,9 @@ class StringProblemsTest {
                         "root/c 3.txt(abcd)",
                         "root/c/d 4.txt(efgh)"
                 },
-                Arrays.asList(
-                        Arrays.asList("root/a/2.txt", "root/c/d/4.txt"),
-                        Arrays.asList("root/a/1.txt", "root/c/3.txt"))
+                List.of(
+                        List.of("root/a/2.txt", "root/c/d/4.txt"),
+                        List.of("root/a/1.txt", "root/c/3.txt"))
         );
 
         scenarios.put(
@@ -239,9 +259,9 @@ class StringProblemsTest {
                         "root/a 1.txt(abcd)",
                         "root/c 3.txt(efgh)"
                 },
-                Arrays.asList(
-                        Collections.singletonList("root/a/1.txt"),
-                        Collections.singletonList("root/c/3.txt"))
+                List.of(
+                        List.of("root/a/1.txt"),
+                        List.of("root/c/3.txt"))
         );
 
         scenarios.forEach((input, expected) -> assertEquals(
@@ -254,8 +274,9 @@ class StringProblemsTest {
     @Test
     void testFindAndReplacePattern() {
         Map<Pair<String[], String>, List<String>> scenarios = new HashMap<>();
-        scenarios.put(Pair.of(new String[]{"abc", "deq", "mee", "aqq", "dkd", "ccc"}, "abb"), Arrays.asList("mee", "aqq"));
-        scenarios.put(Pair.of(new String[]{"a", "b", "c"}, "a"), Arrays.asList("a", "b", "c"));
+
+        scenarios.put(Pair.of(new String[]{"abc", "deq", "mee", "aqq", "dkd", "ccc"}, "abb"), List.of("mee", "aqq"));
+        scenarios.put(Pair.of(new String[]{"a", "b", "c"}, "a"), List.of("a", "b", "c"));
 
         scenarios.forEach((input, expected) -> {
             assertTrue(expected.containsAll(stringProblems.findAndReplacePattern(input.getLeft(), input.getRight())));
@@ -265,6 +286,7 @@ class StringProblemsTest {
     @Test
     void testEvalRPN() {
         Map<String[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"2", "1", "+", "3", "*"}, 9);
         scenarios.put(new String[]{"4", "13", "5", "/", "+"}, 6);
         scenarios.put(new String[]{"4", "13", "5", "-", "+"}, 12);
@@ -275,6 +297,7 @@ class StringProblemsTest {
     @Test
     void testMinPartitions() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("32", 3);
         scenarios.put("12345678", 8);
         scenarios.put("27346209830709182346", 9);
@@ -285,6 +308,7 @@ class StringProblemsTest {
     @Test
     void testLengthOfLongestSubstring() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("abcabcbb", 3);
         scenarios.put("bbbbb", 1);
         scenarios.put(" ", 1);
@@ -295,6 +319,7 @@ class StringProblemsTest {
     @Test
     void testOpenLock() {
         Map<Pair<String[], String>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of(new String[]{"0201", "0101", "0102", "1212", "2002"}, "0202"), 6);
         scenarios.put(Pair.of(new String[]{"0201", "0101", "0102", "1212", "2002"}, "0000"), 0);
         scenarios.put(Pair.of(new String[]{"8888"}, "0009"), 1);
@@ -308,8 +333,9 @@ class StringProblemsTest {
     @Test
     void testGenerateParenthesis() {
         Map<Integer, List<String>> scenarios = new HashMap<>();
-        scenarios.put(3, Arrays.asList("((()))", "(()())", "(())()", "()(())", "()()()"));
-        scenarios.put(1, Collections.singletonList("()"));
+
+        scenarios.put(3, List.of("((()))", "(()())", "(())()", "()(())", "()()()"));
+        scenarios.put(1, List.of("()"));
 
         scenarios.forEach((input, expected) ->
                 assertTrue(expected.containsAll(stringProblems.generateParenthesis(input)))
@@ -319,6 +345,7 @@ class StringProblemsTest {
     @Test
     void testNumMatchingSubseq() {
         Map<Pair<String, String[]>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("abcde", new String[]{"a", "bb", "acd", "ace"}), 3);
         scenarios.put(Pair.of("dsahjpjauf", new String[]{"ahjpjau", "ja", "ahbwzgqnuk", "tnmlanowax"}), 2);
         scenarios.put(Pair.of("btovxbkumc", new String[]{"btovxbku", "to", "zueoxxxjme", "yjkclbkbtl"}), 2);
@@ -330,6 +357,7 @@ class StringProblemsTest {
     @Test
     void testGetHint() {
         Map<Pair<String, String>, String> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("1807", "7810"), "1A3B");
         scenarios.put(Pair.of("1123", "0111"), "1A1B");
         scenarios.put(Pair.of("1", "0"), "0A0B");
@@ -342,6 +370,7 @@ class StringProblemsTest {
     @Test
     void testDecodeString() {
         Map<String, String> scenarios = new HashMap<>();
+
         scenarios.put("3[a]2[bc]", "aaabcbc");
         scenarios.put("3[a2[c]]", "accaccacc");
         scenarios.put("2[abc]3[cd]ef", "abcabccdcdcdef");
@@ -353,6 +382,7 @@ class StringProblemsTest {
     @Test
     void testSentenceScreenFitting() {
         Map<Triple<String[], Integer, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Triple.of(new String[]{"hello", "world"}, 2, 8), 1);
         scenarios.put(Triple.of(new String[]{"a", "bcd", "e"}, 3, 6), 2);
         scenarios.put(Triple.of(new String[]{"i", "had", "apple", "pie"}, 4, 5), 1);
@@ -364,6 +394,7 @@ class StringProblemsTest {
     @Test
     void testNumSplits() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("aacaba", 2);
         scenarios.put("abcd", 1);
         scenarios.put("aaaaa", 4);
@@ -375,9 +406,10 @@ class StringProblemsTest {
     @Test
     void testWordBreak() {
         Map<Pair<String, List<String>>, Boolean> scenarios = new HashMap<>();
-        scenarios.put(Pair.of("leetcode", Arrays.asList("leet", "code")), true);
-        scenarios.put(Pair.of("applepenapple", Arrays.asList("apple", "pen")), true);
-        scenarios.put(Pair.of("catsandog", Arrays.asList("cats", "sand", "dog", "cat", "and")), false);
+
+        scenarios.put(Pair.of("leetcode", List.of("leet", "code")), true);
+        scenarios.put(Pair.of("applepenapple", List.of("apple", "pen")), true);
+        scenarios.put(Pair.of("catsandog", List.of("cats", "sand", "dog", "cat", "and")), false);
 
         scenarios.forEach((input, expected) -> assertEquals(expected,
                 stringProblems.wordBreak(input.getLeft(), input.getRight())));
@@ -386,6 +418,7 @@ class StringProblemsTest {
     @Test
     void testUniqueEmailAddresses() {
         Map<String[], Integer> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"test.email+alex@leetcode.com", "test.e.mail+bob.cathy@leetcode.com",
                 "testemail+david@lee.tcode.com"}, 2);
         scenarios.put(new String[]{"a@leetcode.com", "b@leetcode.com", "c@leetcode.com"}, 3);
@@ -396,6 +429,7 @@ class StringProblemsTest {
     @Test
     void testLicenseKeyFormatting() {
         Map<Pair<String, Integer>, String> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("5F3Z-2e-9-w", 4), "5F3Z-2E9W");
         scenarios.put(Pair.of("2-5g-3-J", 2), "2-5G-3J");
 
@@ -406,6 +440,7 @@ class StringProblemsTest {
     @Test
     void testMinWindow() {
         Map<Pair<String, String>, String> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("ADOBECODEBANC", "ABC"), "BANC");
         scenarios.put(Pair.of("a", "a"), "a");
         scenarios.put(Pair.of("a", "aa"), "");
@@ -417,6 +452,7 @@ class StringProblemsTest {
     @Test
     void testLengthOfLongestSubstringKDistinct() {
         Map<Pair<String, Integer>, Integer> scenarios = new HashMap<>();
+
         scenarios.put(Pair.of("eceba", 2), 3);
         scenarios.put(Pair.of("aaaaa", 2), 5);
         scenarios.put(Pair.of("aa", 1), 2);
@@ -429,6 +465,7 @@ class StringProblemsTest {
     @Test
     void testLengthOfLongestSubstringTwoDistinct() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("eceba", 3);
         scenarios.put("ccaabbb", 5);
         scenarios.put("aaaaa", 5);
@@ -442,6 +479,7 @@ class StringProblemsTest {
     @Test
     void testIsValid() {
         Map<String, Boolean> scenarios = new HashMap<>();
+
         scenarios.put("()", true);
         scenarios.put("()[]{}", true);
         scenarios.put("(]", false);
@@ -455,10 +493,11 @@ class StringProblemsTest {
     @Test
     void testLongestPalindrome() {
         Map<String, List<String>> scenarios = new HashMap<>();
-        scenarios.put("babad", Arrays.asList("aba", "bab"));
-        scenarios.put("cbbd", Collections.singletonList("bb"));
-        scenarios.put("a", Collections.singletonList("a"));
-        scenarios.put("qc", Arrays.asList("q", "c"));
+
+        scenarios.put("babad", List.of("aba", "bab"));
+        scenarios.put("cbbd", List.of("bb"));
+        scenarios.put("a", List.of("a"));
+        scenarios.put("qc", List.of("q", "c"));
 
         scenarios.forEach((input, expected) -> assertTrue(expected.contains(stringProblems.longestPalindrome(input))));
     }
@@ -466,6 +505,7 @@ class StringProblemsTest {
     @Test
     void testGroupAnagrams() {
         Map<String[], List<List<String>>> scenarios = new HashMap<>();
+
         scenarios.put(new String[]{"eat", "tea", "tan", "ate", "nat", "bat"},
                 List.of(
                         List.of("bat"),
@@ -493,6 +533,7 @@ class StringProblemsTest {
     @Test
     void testReverseWords() {
         Map<String, String> scenarios = new HashMap<>();
+
         scenarios.put("the sky is blue", "blue is sky the");
         scenarios.put("   hello world  ", "world hello");
         scenarios.put("a good   example", "example good a");
@@ -503,6 +544,7 @@ class StringProblemsTest {
     @Test
     void testReverseWordsII() {
         Map<char[], char[]> scenarios = new HashMap<>();
+
         scenarios.put(new char[]{'t', 'h', 'e', ' ', 's', 'k', 'y', ' ', 'i', 's', ' ', 'b', 'l', 'u', 'e'},
                 new char[]{'b', 'l', 'u', 'e', ' ', 'i', 's', ' ', 's', 'k', 'y', ' ', 't', 'h', 'e'});
         scenarios.put(new char[]{'a'}, new char[]{'a'});
@@ -516,6 +558,7 @@ class StringProblemsTest {
     @Test
     void testReverseString() {
         Map<char[], char[]> scenarios = new HashMap<>();
+
         scenarios.put(new char[]{'h', 'e', 'l', 'l', 'o'}, new char[]{'o', 'l', 'l', 'e', 'h'});
         scenarios.put(new char[]{'h', 'a', 'n', 'n', 'a'}, new char[]{'a', 'n', 'n', 'a', 'h'});
 
@@ -528,6 +571,7 @@ class StringProblemsTest {
     @Test
     void testMinFlipsMonoIncreasing() {
         Map<String, Integer> scenarios = new HashMap<>();
+
         scenarios.put("00110", 1);
         scenarios.put("010110", 2);
         scenarios.put("00011000", 2);
@@ -540,6 +584,7 @@ class StringProblemsTest {
     @Test
     void testCheckValidString() {
         Map<String, Boolean> scenarios = new HashMap<>();
+
         scenarios.put("()", true);
         scenarios.put("(()", false);
         scenarios.put("((*)", true);
@@ -549,5 +594,52 @@ class StringProblemsTest {
         scenarios.put("(((())))", true);
 
         scenarios.forEach((input, expected) -> assertEquals(expected, stringProblems.checkValidString(input)));
+    }
+
+    @Test
+    void testValidPalindrome() {
+        Map<String, Boolean> scenarios = new HashMap<>();
+
+        scenarios.put("A man, a plan, a canal: Panama", true);
+        scenarios.put("race a car", false);
+        scenarios.put("aA", true);
+        scenarios.put("a", true);
+        scenarios.put("", true);
+        scenarios.put("b,::::::B", true);
+        scenarios.put("0P", false);
+        scenarios.put("0P0", true);
+
+        scenarios.forEach((input, expected) -> assertEquals(expected, stringProblems.isValidPalindrome(input)));
+    }
+
+    @Test
+    void testIsOneEditDistance() {
+        Map<Pair<String, String>, Boolean> scenarios = new HashMap<>();
+
+        scenarios.put(Pair.of("abc", "ac"), true);
+        scenarios.put(Pair.of("abc", "abcd"), true);
+        scenarios.put(Pair.of("abc", "ab"), true);
+        scenarios.put(Pair.of("abc", "aB"), false);
+        scenarios.put(Pair.of("a", ""), true);
+        scenarios.put(Pair.of("", "A"), true);
+        scenarios.put(Pair.of("", ""), false);
+        scenarios.put(Pair.of("a", "a"), false);
+
+        scenarios.forEach((input, expected) ->
+                assertEquals(expected, stringProblems.isOneEditDistance(input.getLeft(), input.getRight())));
+    }
+
+    @Test
+    void testValidPalindromeII() {
+        Map<String, Boolean> scenarios = new HashMap<>();
+
+        scenarios.put("aba", true);
+        scenarios.put("abca", true);
+        scenarios.put("abc", false);
+        scenarios.put("a", true);
+        scenarios.put("", true);
+        scenarios.put("abcdef", false);
+
+        scenarios.forEach((input, expected) -> assertEquals(expected, stringProblems.isValidPalindromeII(input)));
     }
 }
